[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Portal.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes_BackGrounds/Room.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Characters/Main_Character_Animation.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Lives.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Top_Level/Room_Scene.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.7143, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.65857, 100.993 )

[node name="Room_Scene" type="Node2D"]
script = ExtResource( 5 )

[node name="Room_BackGround" type="Sprite" parent="."]
position = Vector2( 508.083, 301.401 )
scale = Vector2( 0.994915, 1.00667 )
texture = ExtResource( 2 )

[node name="Room_Objects" type="StaticBody2D" parent="."]
position = Vector2( 511.826, 302 )
scale = Vector2( 0.973275, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Room_Objects"]
position = Vector2( -525.88, -302 )
scale = Vector2( 1.02746, 1 )
polygon = PoolVector2Array( 195.487, 443.283, 195.487, 463.171, 196.055, 483.013, 312.27, 483.131, 312.27, 472.985, 321.826, 473.221, 322.313, 522.89, 341.117, 522.89, 341.117, 513.31, 380.678, 513.31, 380.501, 603.254, 380.206, 599.668, 644.159, 599.983, 732.786, 600.945, 731.287, 563.113, 722.297, 562.551, 721.736, 543.448, 712.559, 542.324, 712.371, 508.799, 711.809, 491.382, 711.809, 486.699, 711.997, 481.081, 712.559, 475.837, 711.809, 472.465, 720.5, 473.5, 721.25, 483.5, 857.75, 483.25, 857.5, 443, 886.5, 443.25, 886.75, 433, 906, 433.25, 907.172, 426.7, 915.19, 426.7, 915.427, 442.559, 935.695, 443.004, 935.473, 432.982, 954.404, 433.427, 954.627, 383.314, 1023.47, 424.445, 1023.94, 604.254, 0.783127, 602.838, 1.727, 451.818, 1.25507, 448.514 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Room_Objects"]
position = Vector2( -525.88, -302 )
scale = Vector2( 1.02746, 1 )
polygon = PoolVector2Array( 313.616, 221.781, 342.168, 222.96, 341.932, 203.375, 496.511, 203.416, 496.956, 223.462, 526.356, 223.907, 526.802, 202.526, 594.518, 202.693, 595.113, 221.72, 1014.32, 217.616, 895.385, 112.451, 294.12, 111.088, 233.722, 110.956, 235.39, 211.736, 311.476, 212.07, 312.811, 212.07 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Room_Objects"]
position = Vector2( 0, 1.12201 )
polygon = PoolVector2Array( -345.169, 139.024, -345.984, 130.293, -333.752, 129.896, -335.383, -92.34, -284.007, -92.34, -344.761, -104.642 )

[node name="Main_Character_Animation" parent="." instance=ExtResource( 3 )]
position = Vector2( 776.019, 332.013 )

[node name="Portal" parent="." instance=ExtResource( 1 )]
position = Vector2( 99.8933, -171.246 )
next_scene_path = "res://Scenes/Top_Level/Hall_Scene2.tscn"
player_spawn_location = Vector2( 295, 435 )

[node name="Lives" parent="." instance=ExtResource( 4 )]

[node name="Dialog" type="Label" parent="."]
margin_left = 406.0
margin_top = 509.0
margin_right = 607.0
margin_bottom = 540.0
text = "IÂ´ve found a key..."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Window"]
position = Vector2( 412.163, 210.478 )
scale = Vector2( 1, 0.32 )
shape = SubResource( 1 )

[node name="Hide_Dialogs" type="Timer" parent="."]
wait_time = 2.55
one_shot = true

[node name="Buro2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buro2"]
position = Vector2( 191.13, 317.865 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Window" to="." method="_on_Window_body_entered"]
[connection signal="timeout" from="Hide_Dialogs" to="." method="_on_Hide_Dialogs_timeout"]
[connection signal="body_entered" from="Buro2" to="." method="_on_Buro2_body_entered"]
